# jaxtyping2doc

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/jaxtypingdoc/: jax_typing_transformer.py  libcst_utils.py  main.py  utils.py
tests/: test_file.py  test_full.py  test_main_script.py
tests/res/: google_style.py  google_style_true.py  numpy.py  numpy_true.py
tests/res/edge_cases/classes/: raw.py  true.py
tests/res/edge_cases/incomplete_docstring/: raw.py  true.py
tests/res/edge_cases/indirect_array_type/: raw.py  true.py
tests/res/edge_cases/misleading_hint/: raw.py  true.py
tests/res/styles/numpy/: raw.py
