[build-system]
requires = ["setuptools>=42.0", "wheel", "docstring_parser>=0.16"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=jaxtypingdoc"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
exclude = "tests/res"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
# When changing this, also change for flake8 in setup.cfg
line-length = 88
force-exclude = '''
/(
    __pycache__|
    .git|
    .tox|
    venv|
    tests/res
)/
'''
