[metadata]
name = jaxtypingdoc
description = A small script to automatically convert hints from jaxtyping to Python docstrings
author = Jonas Juerss
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    jaxtypingdoc
install_requires =
    libcst>=1.3.1
    docstring_parser>=0.16
    setuptools>=69.5.1
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    jaxtype2doc = jaxtypingdoc.main:main

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=1.10.0
    flake8>=3.9
    flake8-bugbear>=18.2
    tox>=3.24
    pre-commit>=3.7.0

[options.package_data]
jaxtypingdoc = py.typed

[flake8]
# When changing this, also change for black in pyproject.toml
max-line-length = 88
# For F722: https://docs.kidger.site/jaxtyping/faq/#flake8-or-ruff-are-throwing-an-error
# (F821 should be avoided by prepending a space)
# E203: should be disabled for black
extend-ignore = F722 E203
exclude =
    __pycache__
    .git
    .tox
    venv